[package]
name = "space"
version = "0.1.0"
authors = ["Joe Batt <Joe@SolidDesign.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
use_gtk = ["gtk", "gio"]

[dependencies]
rand = "0.8.0"

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]
optional = true

[dependencies.gio]
version = ""
features = ["v2_44"]
optional = true
